# gcom-2025

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dump.rdb  manage.py  pyproject.toml  server.py
.github/workflows/: PR-bot.yml  django.yml  docker.yml  linters.yml
drone/: admin.py  models.py  mps_api.py  urls.py  views.py
drone/migrations/: 0001_initial.py
gcom/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mission/: models.py
mission/migrations/: 0001_initial.py
nav/: models.py  serializers.py  views.py
nav/migrations/: 0001_initial.py
odlc/: apps.py  models.py  serializers.py  views.py
odlc/migrations/: 0001_initial.py
src/: manage.py  server.py
src/.github/workflows/: linters.yml
src/drone/: apps.py  mps_api.py  serializers.py  tests.py  urls.py  views.py
src/drone/migrations/: 0001_initial.py
src/gcom/: asgi.py  settings.py  urls.py
src/images/: models.py  serializers.py  tests.py  urls.py  views.py
src/images/migrations/: 0001_initial.py  0002_alter_image_image.py  0003_groundobject.py  0004_alter_groundobject_id.py  0005_alter_groundobject_id.py  0006_alter_groundobject_id.py  (+7 more)
src/map_tiles/: .gitignore  apps.py  metadata.json  osmbright.json  tests.py  urls.py  views.py
src/mapping/: apps.py  models.py  serializers.py  service.py  tasks.py  tests.py  urls.py  views.py
src/nav/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
src/vision/: apps.py  models.py  serializers.py  tests.py  urls.py
src/websocket/: sockets.py
websocket/: sockets.py  views.py
(+6 files in other folders)
