[tool.poetry]
name = "gcom"
version = "0.1.0"
description = "Ground Control Software Rewrite"
authors = ["21chanas3 <adenchan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
django-polymorphic = "^3.1.0"
drf-spectacular = "^0.27.2"
pillow = "^10.3.0"
requests = "^2.32.3"
celery = "^5.4.0"
channels = "^4.1.0"
daphne = "^4.1.2"
uvicorn = "^0.30.6"
python-socketio = "^5.11.4"
websockets = "^13.1"
redis = "^5.0.8"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
